--- a/app/src/main/res/layout/activity_completejsondata.xml
+++ b/app/src/main/res/layout/activity_completejsondata.xml
@@ -4,20 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.abhi.rajasthantourplan.touristplaces">
+    tools:context="com.example.abhi.rajasthantourplan.completejsondata">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        android:paddingHorizontal="20dp">
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="368dp"
+        android:gravity="center">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/clickme"
+            android:text="click me"/>
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="217dp" />
+        android:id="@+id/textview"/>
+
 
     </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
