final tourism app

--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="20dp"
+    android:background="@drawable/oldpaper"
     tools:context="com.example.abhi.rajasthantourplan.listview">
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:background="@drawable/customtextfield">
+    <ListView
+        android:paddingHorizontal="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
         android:id="@+id/listview1"/>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
