--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -4,29 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bc1"
+    android:paddingHorizontal="7dp"
+    tools:context="com.example.abhi.rajasthantourplan.launcher"
+    >
 
-    tools:context="com.example.abhi.rajasthantourplan.launcher">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="WELCOME   "
-        android:textSize="30dp"
-        />
+    android:gravity="center_horizontal"
+    android:background="@drawable/textfielddesign"
+    >
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:src="@drawable/orangelogo"
+    android:paddingHorizontal="2dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rajasthan Tour plan"
-        android:textSize="30dp"
-        />
 
+    <ImageView
+        android:layout_marginTop="80dp"
+        android:layout_width="220dp"
+        android:layout_height="230dp"
+        android:paddingHorizontal="2dp"
+        android:src="@drawable/ll" />
 
 </LinearLayout>
+
 
 
 </RelativeLayout>
