--- a/app/src/main/res/layout/activity_tourdates.xml
+++ b/app/src/main/res/layout/activity_tourdates.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/oldpaper"
 
     tools:context="com.example.abhi.rajasthantourplan.tourdates">
     <LinearLayout
@@ -12,6 +13,16 @@
         android:orientation="vertical"
         android:gravity="center"
         android:paddingHorizontal="20dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select your Journey dates.."
+            android:textSize="25dp"
+            android:fontFamily="@font/caviardreams"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:gravity="center_horizontal"/>
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,22 +30,28 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         app:mcv_showOtherDates="all"
-        app:mcv_selectionColor="#00F"
+        app:mcv_selectionColor="#ffffff"
+
         />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:weightSum="3">
+
             <TextView
 
-                android:layout_width="wrap_content"
+                android:layout_width="79dp"
                 android:layout_height="wrap_content"
-                android:hint="Start Date"
                 android:layout_weight="1"
-                android:textColorHint="@color/colorPrimary"
+
+                android:gravity="center"
+                android:hint="Start Date"
                 android:textSize="20dp"
-                android:gravity="center"/>
+                android:fontFamily="@font/caviardreams"
+                android:textStyle="bold"
+                android:textColorHint="@color/colorPrimaryDark"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,6 +68,8 @@
                 android:layout_height="wrap_content"
                 android:hint="End Date"
                 android:layout_weight="1"
+                android:fontFamily="@font/caviardreams"
+                android:textStyle="bold"
                 android:gravity="center"/>
 
         </LinearLayout>
@@ -63,9 +82,11 @@
         android:id="@+id/startdate"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/caviardreams"
+        android:textStyle="bold"
 
         android:layout_weight="1"
-        android:background="@drawable/textfielddesign"
+        android:background="@drawable/customtextfield"
         android:textSize="20dp"
         android:gravity="center"/>
         <TextView
@@ -73,6 +94,7 @@
             android:layout_height="wrap_content"
             android:hint="-"
             android:textSize="25dp"
+            android:textColorHint="@color/colorPrimaryDark"
             android:layout_weight="1"
             android:gravity="center"/>
 
@@ -81,11 +103,22 @@
             android:textSize="20dp"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-
-            android:background="@drawable/textfielddesign"
+            android:fontFamily="@font/caviardreams"
+            android:textStyle="bold"
+            android:background="@drawable/customtextfield"
             android:layout_weight="1"
             android:gravity="center"/>
 
     </LinearLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_marginTop="30sp"
+            android:background="@drawable/buttonstyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/caviardreams"
+            android:textStyle="bold"
+            android:text="Proceed"
+            android:textColor="#DAA520"/>
     </LinearLayout>
 </RelativeLayout>
