--- a/app/src/main/res/layout/activity_touristplaces.xml
+++ b/app/src/main/res/layout/activity_touristplaces.xml
@@ -3,21 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="6dp"
+    android:background="@drawable/oldpaper"
     android:layout_height="match_parent"
     tools:context="com.example.abhi.rajasthantourplan.touristplaces">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        android:paddingHorizontal="20dp">
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="217dp" />
 
-    </LinearLayout>
+
+        android:paddingHorizontal="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/spinner"
+            android:paddingHorizontal="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="92dp"
+            android:gravity="center_horizontal"
+            android:text="Where do you want to start from....?"
+            android:textColor="@color/colorPrimary"
+            android:fontFamily="@font/caviardreams"
+            android:textStyle="bold"
+            android:textSize="30dp" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textAlignment="center"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="184dp"
+            android:background="@drawable/customtextfield"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="217dp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
