--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#663399</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#3d1122</color>
+    <color name="colorPrimaryDark">#3d1122</color>
     <color name="colorAccent">#FF4081</color>
 
 </resources>
